Weekend clean-up.

--- a/views/held.jade
+++ b/views/held.jade
@@ -329,7 +329,7 @@ html(lang="de")
 			.vor-nach.fl-rechts
 				+TalentTable(Talente.Wissen, 'Wissenstalente', "t_wis")
 				+TalentTable(Talente.Handwerk, 'Handwerkstalente', "t_han")
-		section.fl-clear#t-spr
+		section.fl-clear#t_spr
 			.vor-nach.fl-links
 				+LanguageTable(Talente.Sprachen, 'Sprachen')
 			.vor-nach.fl-rechts
