Removed unnecessary Express Param.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -33,3 +33,23 @@ html(lang="de")
 						a(href="/liturgie/liste") Übersicht der Liturgien
 					li
 						a(href="/liturgie/neu") Neue Liturgie
+			li Daten runterladen
+				ul
+					li
+						a(href="/dump/talent") Talente
+					li
+						a(href="/dump/zauber") Zauber
+					li
+						a(href="/dump/ritual") Rituale
+					li
+						a(href="/dump/liturgie") Liturgien
+			li Daten hochladen
+				ul
+					li
+						a(href="/insert/talent") Talente
+					li
+						a(href="/insert/zauber") Zauber
+					li
+						a(href="/insert/ritual") Rituale
+					li
+						a(href="/insert/liturgie") Liturgien
