Done DB data download.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -36,13 +36,13 @@ html(lang="de")
 			li Daten runterladen
 				ul
 					li
-						a(href="/dump/talent") Talente
+						a(href="/dump/talent.json") Talente
 					li
-						a(href="/dump/zauber") Zauber
+						a(href="/dump/zauber.json") Zauber
 					li
-						a(href="/dump/ritual") Rituale
+						a(href="/dump/ritual.json") Rituale
 					li
-						a(href="/dump/liturgie") Liturgien
+						a(href="/dump/liturgie.json") Liturgien
 			li Daten hochladen
 				ul
 					li
