Written DB backup. Client-side upload works, couldn’t test DB itself.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -43,13 +43,5 @@ html(lang="de")
 						a(href="/dump/ritual.json") Rituale
 					li
 						a(href="/dump/liturgie.json") Liturgien
-			li Daten hochladen
-				ul
-					li
-						a(href="/insert/talent") Talente
-					li
-						a(href="/insert/zauber") Zauber
-					li
-						a(href="/insert/ritual") Rituale
-					li
-						a(href="/insert/liturgie") Liturgien
+			li 
+				a(href="/insert") Daten hochladen
