--- a/views/edit-held/rituale.jade
+++ b/views/edit-held/rituale.jade
@@ -77,7 +77,7 @@ html(lang="de")
 				a(href="/held/"+_held._id, title="Heldenbogen")= _held.Person.Name
 		
 		main
-			form(action="/ritual/"+_held._id, method="post", accept-charset="utf-8")
+			form(action="/rituale/"+_held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 				
 				section#ritualkenntnis
