--- a/views/magie.jade
+++ b/views/magie.jade
@@ -98,9 +98,9 @@ html(lang="de")
 						li
 							a(href="/zauber/"+_id) Zauber
 						li
-							a(href="/ritual/"+_id+"#ritualkenntnis") Ritualkenntnis
+							a(href="/rituale/"+_id+"#ritualkenntnis") Ritualkenntnis
 						li
-							a(href="/ritual/"+_id+"#rituale") Rituale
+							a(href="/rituale/"+_id+"#rituale") Rituale
 
 		header#top
 			h1.mitte
