Starting with login protection.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -3,7 +3,17 @@ html(lang="de")
 	head
 		meta(charset="utf-8")
 		title Startseite
-		link(rel="stylesheet", type="text/css", href="/system-new.css")
+		style.
+			body {
+				font-family: Georgia, sans-serif;
+			}
+			ul {
+				list-style-type: none;
+			}
+			li {
+				padding-top: 0.2em;
+				padding-bottom: 0.2em;
+			}
 	body
 		h1 Mach was in der Datenbank …
 		ul
