--- a/views/edit-held/liturgien.jade
+++ b/views/edit-held/liturgien.jade
@@ -50,9 +50,9 @@ html(lang="de")
 					a(href="/weihe/"+_held._id, title="Geweihtenbogen")= "⇒ "+_held.Person.Name.split(' ')[0]
 		header#top
 			h1.mitte
-				a(href="/held/"+_id)= _held.Person.Name
+				a(href="/held/"+_held._id)= _held.Person.Name
 		main
-			form(action="/liturgien/"+_id, method="post", accept-charset="utf-8")
+			form(action="/liturgien/"+_held._id, method="post", accept-charset="utf-8")
 				input(type="hidden", name="_method", value="put")
 				
 				section#liturgiekenntnis
